# dbt-job-maestro

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  DEPLOYMENT.md  LICENSE  Makefile  QUICKSTART.md  README.md  SETUP_GUIDE.md  config.yml  maestro-config.yml  myproject-config.yml  pyproject.toml  requirements.txt  setup.cfg  test_uniquess_models.py
.github/workflows/: deploy-dbt-jobs.yml  lint.yml  test.yml
dbt_job_maestro/: __init__.py  airflow_dag_generator.py  base_selector.py  cli.py  config.py  deployment.py  graph_builder.py  job_generator.py  manifest_parser.py  model_resolver.py  overlap_detector.py  selector_generator.py  selector_orchestrator.py  selector_types.py
dbt_job_maestro/selectors/: __init__.py  fqn_selector.py  manual_selector.py
examples/: PRIORITY_SYSTEM_GUIDE.md  README.md  config.yml  config_mixed_mode.yml  example_usage.py  selectors_with_manual.yml  smart_exclusion_example.md
scripts/: fetch_job_ids.py  update_config_with_job_ids.py
tests/: __init__.py  conftest.py  test_airflow_dag_generator.py  test_cli.py  test_config.py  test_graph_builder.py  test_job_generator.py  test_manifest_parser.py  test_path_exclusion.py  test_qa_regressions.py  test_selector_refactoring.py  test_selector_system.py
